add auth in all routes
