# src/routers/tasksRouter.ts
@@ -8,9 +8,9 @@ import { validateTokenMiddleware } from "../middlewares/tokenValidatorMIddleware
 const tasksRouter = Router();
 
 tasksRouter.get("/tasks", validateTokenMiddleware, listTasks);
-tasksRouter.get("/tasks/:id", listTaskById);
-tasksRouter.post("/tasks", validateSchema(taskSchema), createTask);
-tasksRouter.put("/tasks/:id", validateSchema(updateSchema), updateTask);
-tasksRouter.delete("/tasks/:id", deleteTask);
+tasksRouter.get("/tasks/:id", validateTokenMiddleware, listTaskById);
+tasksRouter.post("/tasks", validateTokenMiddleware, validateSchema(taskSchema), createTask);
+tasksRouter.put("/tasks/:id", validateTokenMiddleware, validateSchema(updateSchema), updateTask);
+tasksRouter.delete("/tasks/:id", validateTokenMiddleware, deleteTask);
 
 export default tasksRouter;
